[package]
authors = ["mdrokz <mohammadmunshi@gmail.com>"]
name = "llama_basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hf-hub = { version = "0.3.2", features = ["tokio"] }
llama_cpp_rs = { path = "../../", features = ["metal"] }
